Fix up spacing on IV / EV for Trainer page and fix up the backend calc

--- a/src/components/Badges/elements/BadgeDetail/BadgeDetail.module.scss
+++ b/src/components/Badges/elements/BadgeDetail/BadgeDetail.module.scss
@@ -129,7 +129,16 @@
         align-items: left;
         font-size: var(--font-size-4);
         color: var(--contrast);
-        
+
+        .gridContainer {
+          display: grid;
+          grid-template-columns: 3rem 2.5rem 2.5rem;
+
+          .gridItem {
+            text-align: center;
+          }
+        }
+
         .addStats {
           font-weight: bold;
           color: var(--contrast);
